Fixed gap on container boxes via flex

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,11 @@ input {
     box-sizing: border-box
 }
 
+/* General box, adds transition */
+.genBox {
+    transition: all 0.3s ease;
+}
+
 .startBtn {
     font-family: 'Handjet', sans-serif;
     background-color: #222222;
@@ -221,6 +226,9 @@ input[type="submit"].startBtn:hover {
     cursor: pointer;
     margin: 2px;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     /* Ensure positioning for floating effect */
     width: 70vw;
     /* height: min-content; */
@@ -233,12 +241,11 @@ input[type="submit"].startBtn:hover {
 }
 
 .switch-toggle input+label {
-    padding: 7px;
-    float: left;
     color: #fff;
     cursor: pointer;
     text-align: center;
-    width: 48.2%;
+    width: 50%;
+    padding: 7px 0;
     border-radius: 3px;
 }
 
